--- a/src/nav.config.json
+++ b/src/nav.config.json
@@ -1,25 +1,12 @@
-[
-  {
+[{
     "name": "开发指南",
-    "children": [
-      {
-        "path": "/installation",
-        "name": "使用文档"
-      }
-    ]
+    "children": [{
+      "path": "/installation",
+      "name": "使用文档"
+    }]
   },
   {
     "name": "组件",
-    "groups": [
-      {
-        "groupName": "hello",
-        "list": [
-          {
-            "path": "/hello",
-            "title": "Demo"
-          }
-        ]
-      }
-    ]
+    "groups": []
   }
 ]
