--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "vue": "^2.5.2"
   },
   "dependencies": {
-    "element-ui": "^2.0.5",
+    "@hfe/gear-publish-plugin": "^1.0.2",
     "algoliasearch": "^3.24.5",
-    "highlight.js": "^9.3.0",
-    "throttle-debounce": "^1.0.1",
-    "perspective.js": "^1.0.0",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
@@ -32,11 +29,13 @@
     "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.28.7",
+    "element-ui": "^2.0.5",
     "es6-promise": "^4.0.5",
     "eslint": "^3.10.2",
     "eslint-plugin-json": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "highlight.js": "^9.3.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "inject-loader": "^3.0.1",
@@ -47,12 +46,14 @@
     "markdown-it-anchor": "^2.5.0",
     "markdown-it-container": "^2.0.0",
     "node-sass": "^4.5.3",
+    "perspective.js": "^1.0.0",
     "postcss": "^5.1.2",
     "postcss-loader": "0.11.1",
     "postcss-salad": "^1.0.8",
     "rimraf": "^2.5.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "throttle-debounce": "^1.0.1",
     "transliteration": "^1.1.11",
     "uppercamelcase": "^1.1.0",
     "url-loader": "^0.6.2",
