--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue": "^2.5.2"
   },
   "dependencies": {
-    "@hfe/gear-publish-plugin": "^1.0.5",
+    "gear-publish-plugin": "^1.0.5",
     "algoliasearch": "^3.24.5",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
