--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hfe/gear-template",
+  "name": "gear-template",
   "version": "0.0.10",
   "description": "组件库管理",
   "main": "index.js",
