--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-    "presets": [["es2015", { "loose": true }]],
-    "plugins": ["transform-vue-jsx"]
-  }
-  
+  "presets": [
+    ["es2015", {
+      "loose": true
+    }]
+  ],
+  "plugins": ["transform-vue-jsx"]
+}
