--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "vue": "^2.5.2"
   },
   "dependencies": {
-    "gear-publish-plugin": "^1.0.5",
+    "add-asset-html-webpack-plugin": "^2.1.2",
     "algoliasearch": "^3.24.5",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -35,6 +35,7 @@
     "eslint-plugin-json": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.5",
+    "gear-publish-plugin": "^1.0.5",
     "highlight.js": "^9.3.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
