--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.5.2"
   },
   "dependencies": {
+    "ora": "^1.3.0",
     "add-asset-html-webpack-plugin": "^2.1.2",
     "algoliasearch": "^3.24.5",
     "babel-cli": "^6.14.0",
@@ -67,6 +68,10 @@
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1",
     "webpack-node-externals": "^1.6.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   },
   "author": {
     "name": "liuqingqing05",
